Restructured repository
Removed HTML documentation due to size.
Updated README.md file.